# mycpp

./: C11Thread.cpp  ForEach.cpp  Makefile
$RECYCLE.BIN/S-1-5-21-2462767033-3697558823-2761026608-1002/: $I1SNX4N.gitignore  $I5FBZJ9.py  $IFLVBNE.yml  $IONP68D.sh  $IYLRNV7.clang-format
.Trash-1000/files/: CServiceA.2.cpp  CServiceA.2.h  CServiceA.cpp  CServiceA.h  Client  Data.2.hh  DataSK.3.cc
App/AppDoc/: CORBA, C++ and Linux.html  krishiSevaK Testing.odt
App/Server/: CServiceA.cpp  CServiceA.h  ClientTest Documents.ods  KrishiSevak.hh  KrishiSevak.idl  KrishiSevakSK.cc  Makefile  MappingDocument.ods  ServerKrishiSevak  ServerKrishiSevak.cpp  omniNamesError.txt  readme.txt
App/TestClients/: Makefile  (+6 more)
Database/: Employees  Employees.cpp  Employees.h  Makefile
Pointers/: CMakeCache.txt  CMakeLists.txt  Makefile  UniquePtr  cmake_install.cmake
Pthread/: CMakeLists.txt
PthreadTest/: PthreadTest.cpp  a.out
SharedPtr/: CMakeCache.txt  CMakeLists.txt  Makefile  SharedPtr  cmake_install.cmake
TemplateSpec/: CMakeCache.txt  CMakeLists.txt  DynamicArray  Makefile  cmake_install.cmake
TemplateSpec/include/: DynamicArray.h
TemplateSpec/src/: DynamicArray.cpp
Thread/: CMakeLists.txt
Thread2/: CMakeLists.txt
Thread2/include/: Account.h  Thread2.h
Thread2/src/: Account.cpp  Thread2.cpp  main.cpp
WeakPtr/: CMakeCache.txt  CMakeLists.txt  Makefile  WeakPtr  cmake_install.cmake
corba/: CServiceA.cpp  DataSK.cc_old  Server  Server.cpp  installlog.txt  omninames-nintu.bak  readme.txt  totallibs.txt
testprog/: Makefile  sample.cpp
testpy/: readIp.py
(+448 files in other folders)
